# rust-jwt-diesel-actix-postgresql

./: Cargo.toml  README.md  gen-schema.bash
migrations/20230829134640_users_table/: down.sql  up.sql
migrations/20230829142054_notes_table/: down.sql  up.sql
src/: db.rs  error.rs  main.rs  schema.rs  token.rs
src/models/notes/: model.rs
src/models/user/: model.rs
src/routes/api/: login.rs  mod.rs  notes.rs  register.rs
