[package]
name = "rust-jwt-diesel-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.1", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
listenfd = "1.0.1"
r2d2 = "0.8.10"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["macros", "sync"] }
tokio-postgres = "0.7.10"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
